Tokenizer/target/generated-sources/antlr4/TokenizerParser.java
// Generated from Tokenizer.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TokenizerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, STRINGLITERAL=2, KEYWORD=3, IDENTIFIER=4, FLOATLITERAL=5, INTLITERAL=6, 
		OPERATOR=7, WS=8;
	public static final String[] tokenNames = {
		"<INVALID>", "COMMENT", "STRINGLITERAL", "KEYWORD", "IDENTIFIER", "FLOATLITERAL", 
		"INTLITERAL", "OPERATOR", "WS"
	};
	public static final int
		RULE_r = 0, RULE_token = 1;
	public static final String[] ruleNames = {
		"r", "token"
	};

	@Override
	public String getGrammarFileName() { return "Tokenizer.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TokenizerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(TokenizerParser.EOF, 0); }
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokenizerListener ) ((TokenizerListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokenizerListener ) ((TokenizerListener)listener).exitR(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(7);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << STRINGLITERAL) | (1L << KEYWORD) | (1L << IDENTIFIER) | (1L << FLOATLITERAL) | (1L << INTLITERAL) | (1L << OPERATOR) | (1L << WS))) != 0)) {
				{
				{
				setState(4);
				matchWildcard();
				}
				}
				setState(9);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(10); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TokenContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(TokenizerParser.COMMENT, 0); }
		public TerminalNode INTLITERAL() { return getToken(TokenizerParser.INTLITERAL, 0); }
		public TerminalNode STRINGLITERAL() { return getToken(TokenizerParser.STRINGLITERAL, 0); }
		public TerminalNode FLOATLITERAL() { return getToken(TokenizerParser.FLOATLITERAL, 0); }
		public TerminalNode KEYWORD() { return getToken(TokenizerParser.KEYWORD, 0); }
		public TerminalNode IDENTIFIER() { return getToken(TokenizerParser.IDENTIFIER, 0); }
		public TerminalNode OPERATOR() { return getToken(TokenizerParser.OPERATOR, 0); }
		public TokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_token; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TokenizerListener ) ((TokenizerListener)listener).enterToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TokenizerListener ) ((TokenizerListener)listener).exitToken(this);
		}
	}

	public final TokenContext token() throws RecognitionException {
		TokenContext _localctx = new TokenContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_token);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(12);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMENT) | (1L << STRINGLITERAL) | (1L << KEYWORD) | (1L << IDENTIFIER) | (1L << FLOATLITERAL) | (1L << INTLITERAL) | (1L << OPERATOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}